deploy/k3s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: swarmboty
    labels:
        app.kubernetes.io/part-of: swarmboty
